--- a/frontend/src/screens/Opening/Opening.scss
+++ b/frontend/src/screens/Opening/Opening.scss
@@ -17,6 +17,6 @@
   @media only screen and (max-width: 671px) {
     .favourite-activities {
       background-color: var(--#{vars.$bcgov-prefix}-layer-01);
-      padding: 16px;
+      padding: 5px;
     }
   }
